dash_docs/assets/override.css
body {
  font-size: 16px;
  line-height: 17px;
  letter-spacing: 0px;
  font-family: "Campaign", serif;
  color: #20293d;
  font-weight: 400;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.42;
  letter-spacing: normal;
  text-rendering: optimizeLegibility !important;
  -webkit-font-smoothing: antialiased !important;
  margin: 0px;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "jubilat", sans-serif;
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 300;
}
h1 { font-size: 50px; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; }
h2 { font-size: 40px; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem;}
h3 { font-size: 30px; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
h4 { font-size: 26px; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
h5 { font-size: 22px; line-height: 1.5;  letter-spacing: -.05rem; margin-bottom: 0.6rem; margin-top: 0.6rem;}
h6 { font-size: 20px; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}

._dash-loading {
  text-align: center;
  margin-top: 50px;
}

/* Overall layout */
.content-wrapper {
    display: flex;
    flex-flow: row wrap;
}
.content-wrapper > * {
  flex: 1 100%;
}
.header {
    height: 60px;
}
.sidebar {
    order: 0;
    flex: 1 0 0;
    padding-left: 5px;
    padding-right: 5px;
}

.rhs-content {
    flex: 3 0px;
    order: 1;
    padding-left: 10px;
}

.page-menu {
    order: 2;
    flex: 1 0 0;
    height: 100vh;
    position: sticky;
    top: 20px;
    margin-top: 30px;
    margin-left: 10px;
    font-size: 12px;
}
.page-menu--header {
    font-weight: bold;
    font-size: 13px;
    opacity: 0.5;
}
.page-menu--link {
    border-bottom-style: dotted;
    text-decoration: none;
    border-bottom-width: 1px;
    cursor: pointer;
    opacity: 0.5;
}
.page-menu--link:hover {
    border-bottom-style: solid;
    border-bottom-color: #0D67BF;
    opacity: 1;
    color: #0D67BF;
}

.content {
    margin-left: 25px;
    max-width: 800px;
}

.backlinks {
    opacity: 0.5;
}
.backlinks a:hover {
    opacity: 1.0;
}

/* Sidebar */
.sidebar {
    background-color: #e4f5f2;
    border-right: thin lightgrey solid;
    font-size: 12px;
    max-width: 250px;
}

.sidebar input {
    display: block;
    margin-top: 10px;
    width: calc(100% - 20px);
    border-radius: 5px;
    border: none;
    height: 20px;
    padding: 5px;
    padding-left: 10px;
    font-size: 14px;
    line-height: 1.42857143;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px
        rgba(0,0,0,.075);
        -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
        -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
        transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
        transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
        transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
}

.sidebar input:focus {
    border-color: #849;
    outline: 0;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(136,68,153,.6);
    box-shadow: inset 0 1px 1px
    rgba(0,0,0,.075),0 0 8px rgba(136,68,153,.6);
}

.sidebar--0 summary {
    font-size: 15px;
}
.sidebar--1 details {
    padding-left: 10px;
}
.sidebar summary {
    font-family: "jubilat", sans-serif;
    font-weight: 400;
    padding-top: 10px;
    padding-bottom: 10px;
}

.sidebar .link {
    padding-bottom: 5px;
}
summary {
    cursor: pointer;
}
summary:hover {
    text-decoration: underline;
}

.sidebar a {
    display: block;
    margin-top: 0px;
    margin-bottom: 0px;
    padding: 3px 0px 3px 5px;
}

.sidebar a.active {
    background-color: white;
    border-right: solid #20293d 4px;
    margin-right: -6px; /* -5 for the parent padding, -1 for the border */
}
.sidebar .no-results {
    margin-top: 10px;
}
.sidebar .no-results a {
    display: inline;
    padding: 0px;
}
.sidebar hr {
    margin-top: 10px;
    margin-bottom: 10px;
}

/* Header */
.header {
  background-color: white;
  border-bottom: thin #d8d8d8 solid;
}

.header .links {
  display: inline-block;
  float: right;
  text-transform: uppercase;
  font-weight: 500;
  letter-spacing: 0.5px;
  color: rgb(81, 104, 131);
  font-size: 16px;
  vertical-align: middle;
}

.header .links .link {
  margin-left: 20px;
  line-height: 60px;
  display: inline-block;
  color: #506784;
  cursor: pointer;
  background-color: white;
  text-decoration: none;
}

.header .links .link:hover {
  color: #0D67BF;
  text-decoration: none;
}

.header .links .link.active {
  border-bottom: #119DFF 2px solid;
  color: #2A3F5F;
  height: 59px;
}

.header .links .link:hover {
  border-bottom: #119DFF 2px solid;
  color: #2A3F5F;
  height: 59px;
}


.header .logo img {
  height: 95%;
  border-top: 2px transparent solid;
  border-bottom: 2px transparent solid;
}
.header .logo img:hover {
    border-bottom: 2px rgb(61, 76, 120) solid;
}

/* Reference */
.reference ul {
    padding-left: 10px;
}

/* Example Container */

.example-container {
  border: thin #d8d8d8 solid;
  padding: 15px;
  overflow-x: scroll;
}

.example-container h1,
.example-container h2,
.example-container h3,
.example-container h4,
.example-container h5,
.example-container h6 {
  font-weight: 300;
  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: rgb(50, 50, 50);
}

.gallery .image-link {
  background-color: white;
}

.gallery img {
  width: 100%;
  border: thin lightgrey solid;
  border-radius: 5px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.toc--chapter {
  list-style: none;
}

.toc--chapter .toc--chapter-link {
    background-color: white;
    text-decoration: underline;
    padding-left: 0px;
    list-style: none;
    font-size: 18px;
    line-height: 1;
}

.toc--chapter-content {
  font-size: 14px;
}

.toc--chapter-content ul {
    font-size: 100%;
}

.toc--chapter-content ul li {
    margin-bottom: 0.5rem;
}

/* Links
–––––––––––––––––––––––––––––––––––––––––––––––––– */
a {
  color: #506784;
  text-decoration: underline;
  border-radius: 1px;
}
.sidebar a {
    padding-left: 4px;
    padding-right: 4px;
}

.js-plotly-plot .plotly a {
  background-color: inherit;
}

.content a:hover {
  color: #0D67BF;
  text-decoration: underline;}

.content a > img:hover {
  border: thin #119DFF solid;
  cursor: pointer;
}

.content p > code,
.content li > code{
    background-color: rgb(243, 246, 251);
    border: 0.5px rgb(224, 232, 242) solid;
    border-radius: 4px;
    font-size: 95%;
    padding-left: 3px;
    padding-right: 3px;
}

.cytoscape-reference p {
    display: inline;
    font-size: 100%;
}

.cytoscape-reference ol > li > ul, ul > li > ul {
    list-style-type: disc;
}

.cytoscape-reference ol > li > ul > li > ul {
    list-style-type: circle;
}

.warning-box {
    color: #800;
    background-color: #edd;
    width: 100%;
    border-radius: 5px;
    padding: 10px;
    margin-bottom: 10px;
}

@media (min-width: 0px) {
  .toc-chapters {
    column-count: 1;
  }

  .header .links {
    display: none;
  }
}

._dash-undo-redo {
  display: none;
}

@media (min-width: 450px) {
  .header .links {
    display: block;
  }
}

@media (max-width: 950px) {
    .page-menu {
        display: none;
    }
}

@media (max-width: 770px) {
    .sidebar {
        display: none;
    }
    .content {
        margin-left: 10px;
        margin-right: 10px;
    }
    .logo {
        margin-left: 10px;
    }
}

